# tradfri_mcp

./: .env.example  .gitignore  Dockerfile  README.md  README_zh.md  aliases.json  coap_client.py  config.py  devices.py  docker-compose.yml  pyproject.toml  server.py
config/: mcporter.json
docs/: dtls-tradfri-pitfalls.md  openclaw-tradfri-mcp-tutorial.md
openclaw-skill/: SKILL.md  _meta.json
openclaw-skill/scripts/: tradfri
scripts/: gen_psk.py  scan.py
